syntax = "proto3";
import "item.proto";

option java_multiple_files = true;
option java_package = "dk.via.nbnp.databaseserver.protobuf";


service ImageService{
  rpc UploadImage(UploadImageDto) returns (Image);
  rpc GetImageByItemId(SearchImageDto) returns (stream Image);
  rpc GetImageById(SearchImageDto) returns (Image);
  rpc DeleteImageById(SearchImageDto) returns (Image);
}

message Image {
  int64 id = 1;
  bytes image = 2;
  int64 itemId = 3;
}

message UploadImageDto {
  bytes image = 1;
  int64 itemId = 2;
}

message SearchImageDto {
  int64 id = 1;
  int64 itemId = 2;
}